tests/src/frontend/visibility/invalid/module_protected_const.sk
module Foo;

protected const bar : Int = 112;

module end;

